# HFTEngine

./: .gitignore  CMakeLists.txt  README.md  auto.sh
include/: bar.h  client.h  dotenv.h  order.h
src/: client.cpp  dotenv.cpp  main.cpp
tests/: TestAuthenticate.cpp  TestAuthenticate.h  TestConnect.cpp  TestConnect.h  test_main.cpp
